attempt at fixing ios white space issues

--- a/cmn/MVP.css
+++ b/cmn/MVP.css
@@ -8,8 +8,17 @@ html, body {
 }
 
 body {
-  overflow-y: scroll;
-  overflow-x: hidden;	
+  overflow-y: scroll;	
+  overflow-x: hidden;
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3/2), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5){
+	html,
+	body {
+	    width:100%;
+	    overflow-x:hidden;
+  }
+
 }
 
 
